--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p><br><br></p>	
 <div class="zhengti">
 	<div class="juzuo1">
-			V25030129(Ngô Trung Hiếu)
+			V24100048(Nguyễn Tiến Dũng)
 	</div>
 	<div class="saomatishi juzhong" id="biaoti">
 		将二维码对准扫描器扫码进出场	
